APF-1230-Pull request comments fixes